# hackerrank

./: CMakeLists.txt  bithacks.h  collatz.cpp  collatz.h  factor.h  geometry.h  hackerrank.kdev4  tests.cpp
